--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "allowJs": true,
+
     "target": "ES2020",
     "useDefineForClassFields": true,
     "module": "ESNext",
